--- a/lista-6/ex1/style.css
+++ b/lista-6/ex1/style.css
@@ -1,45 +1,164 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* Reset*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background: linear-gradient(35deg, #95f5dd, #53b7f1, #0568aa);
-    min-height: 100vh;
+/* Base */
+body {
+  height: 100vh;
+  background-color: #d6d4d4;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #000000;
 }
 
-header{
-    text-align: center;
-    padding: 5px;
-    background-color: #d3ebff;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: large;
-
-}
-header h1{
-    color: #333066;
+img {
+  max-width: 100%;
 }
 
-table{
-    align-items: center;
-    width: 45vw;
-    max-width: 45vw;
-}
-img{
-    margin-left: 50px;
-    margin-top: 50px;
-    height: 200px;
-    width: 200px;
-    max-height: 350px;
-    max-width: 350px;
-    float: left;
-    border-radius: 50px;
-
+/* Header */
+header {
+  background: linear-gradient(170deg, #3d003d, #f300f3, #3d003d);
+  padding: 2rem;
+  text-align: center;
+  color: #fff;
+  border-bottom: 3px solid;
+  border-image-slice: 0.9;
+  border-image-source: linear-gradient(90deg, #ff9100, #1c0d6a, #438b86);
 }
 
-
-.text{
-    padding: 40px 20px;
+/* Sections Gerais*/
+.section{
+  padding: 2rem;
+  border-bottom: 3px solid;
+  border-image-source: linear-gradient(90deg, #ff9100, #1c0d6a, #438b86);
+  margin-bottom: 20px;
+}
+.section-title{
+  text-align: center;
+  margin-bottom: 1.5rem;
 }
 
+/* About */
+.about .content{
+  width: 75%;
+  margin: 0 auto;
+}
+.about .image-content{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 3px #ff9100;
+  overflow: hidden;
+  float: left; /* usando float */
+}
+.about .image-content:hover{
+    transform: translate(-10px, -10px)
+}
+.about .description-content{
+  margin-left: 180px;
+  padding: 1rem;
+}
+
+/* Skills */
+.skills{
+  text-align: center;
+  background-color: #fff;
+}
+.skills ul{
+  list-style: none;
+  margin: 0 auto;
+}
+.skills ul li{
+  display: inline-block;
+  border: 2px solid #ff9100;
+  padding: 0.5rem 1.5rem;
+  color:#fff;
+  background: linear-gradient(170deg, #3d003d, #f300f3, #3d003d);
+  background-size: cover;
+  border-radius: 50px;
+  margin: 0.5rem;
+  cursor: pointer;
+  transition: transform linear 0.3s;
+}
+
+.skills ul li:hover{
+  transform: scale(1.2);
+}
+
+/* Project */
+.projects{
+  text-align: center;
+}
+.projects .project{
+  background: linear-gradient(170deg, #3d003d, #f300f3, #3d003d);
+  width: 40%;
+  max-width: 350px;
+  margin: 1rem;
+  display: inline-block;
+  padding: 2rem;
+  color: #fff;
+  box-shadow: 0 0 0 2px #ff9100;
+  border-radius: 10px;
+  vertical-align: top;
+}
+
+/* Hobby */
+.hobbies{
+  text-align: center;
+}
+.hobbies .hobby{
+  background: linear-gradient(170deg, #3d003d, #f300f3, #3d003d);
+  width: 40%;
+  max-width: 350px;
+  margin: 1rem;
+  display: inline-block;
+  padding: 2rem;
+  color: #fff;
+  box-shadow: 0 0 0 2px #ff9100;
+  border-radius: 10px;
+  vertical-align: top;
+}
+/* Contact */
+.contact{
+  text-align: center;
+  background: linear-gradient(170deg, #3d003d, #f300f3, #3d003d);
+  color: #fff;
+}
+.contact form{
+  width: 60%;
+  max-width: 500px;
+  margin: 2rem auto;
+  text-align: left;
+}
+.contact label{
+  display: block;
+  margin-bottom: 0.3rem;
+  text-align: left;
+}
+.contact input{
+  all: unset;
+  background-color: #fff;
+  display: block;
+  margin-bottom: 1rem;
+  padding: 0.6rem 1rem;
+  width: 100%;
+  border-radius: 6px;
+  color: #000000;
+}
+.contact input[type=submit]{
+  background-color: #ff9100;
+  font-size: 1.2rem;
+  text-align: center;
+  cursor: pointer;
+}
+
+/* Rodapé */
+footer{
+  background-color: #0e0d0b;
+  color: #fff;
+  padding: 4rem;
+  text-align: center;
+  font-size: 1.2rem;
+}
