--- a/lista-6/ex2/style.css
+++ b/lista-6/ex2/style.css
@@ -6,20 +6,41 @@
 }
 
 body{
-    background-color: rgb(224, 224, 224);
+    background-color: rgb(173, 173, 173);
 }
 
 header{
-    background-color: rgb(66, 66, 66);
+    background-color: rgb(22, 22, 22);
     padding: 20px;
 }
 
 header h1{
     margin-bottom: 7px;
+    color: whitesmoke;
 }
 
 a{
     text-decoration: none;
     margin-left: 7px;
     color: whitesmoke;
+}
+
+.colunas{
+    display: flex;
+}
+
+img{
+    width: 400px;
+    margin: 30px;
+    align-items: center;
+    justify-content: center;
+}
+
+footer {
+    width: 100%;
+    height: 50px;
+
+    background-color: rgb(22, 22, 22);
+    color: whitesmoke;
+    text-align: center; 
 }
