--- a/lista-7/ex2/style.css
+++ b/lista-7/ex2/style.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: black;
     color: white;
+    font-family: "Pixelify Sans", sans-serif;
+}
+
+body{
+    background-color: black;
 }
 
 header{
@@ -12,7 +18,12 @@ header{
 }
 
 .prophecy{
+    text-align: justify;
     margin: 25px;
+}
+
+.prophecy h2{
+    text-align: center;
 }
 
 .container{
@@ -22,16 +33,26 @@ header{
 }
 
 .card{
-    margin: 25px;
+    margin: 50px;
     width: 16vw;
-    height: 48vh;
-    background-color: white;
-    border-radius: 10px;
+    height: 40vh;
+    background-color: rgb(70, 70, 70);
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-image{
-    
+img {
+  margin-top: 15px;
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  background-color: green;
+  border-radius: 5px;
+}
+
+.card:hover{
+    transform: scale(1.05);
+    transition: transform 0.4s;
 }
