--- a/lista-7/ex2/style.css
+++ b/lista-7/ex2/style.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     color: white;
-    font-family: "Pixelify Sans", sans-serif;
+    font-family: "Press Start 2P", system-ui;
+    font-style: normal;
 }
 
 body{
@@ -34,22 +36,32 @@ header{
 
 .card{
     margin: 50px;
-    width: 16vw;
-    height: 40vh;
-    background-color: rgb(70, 70, 70);
+    width: 300px;
+    height: 390px;
+    background-color: rgb(56, 56, 56);
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
-img {
-  margin-top: 15px;
-  width: 250px;
-  height: 250px;
-  object-fit: cover;
-  background-color: green;
-  border-radius: 5px;
+img{
+    margin-top: 15px;
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.kris-gif{
+    background: linear-gradient(60deg, #8df2ff, #ff008c);
+}
+.susie-gif{
+    background: linear-gradient(60deg, #7770b3, #dd11c2);
+}
+.ralsei-gif{
+    background: linear-gradient(60deg, #ff40a9, #83f0a7);
 }
 
 .card:hover{
