--- a/lista-8/ex1/style.css
+++ b/lista-8/ex1/style.css
@@ -5,15 +5,13 @@
 }
 
 header{
-    height: 10%;
-    width: 100%;
+    height: 7vh;
     background-color: rgb(255, 0, 0);
 }
 
 .layout{
     display: flex;
-    height: 80%;
-    width: 100%;
+    height: 88vh;
     background-color: rgb(9, 255, 0);
 }
 
@@ -30,11 +28,11 @@ main{
 }
 
 .card{
-    height: 300px;
-    width: 300px;
+    height: 200px;
     flex-basis: 200px;
     flex-grow: 1;
     flex-shrink: 1;
+    transition: background-color 1s;
     background-color: rgb(0, 247, 255);
 }
 
@@ -46,8 +44,43 @@ main{
     background-color: rgb(38, 0, 255);
 }
 
+#card-1{
+    flex-basis: 350px;
+    flex-grow: 3;
+    flex-shrink: 0;    
+    align-self: auto;
+    order: 3;
+}
+
+#card-2{
+    flex-basis: 400px;
+    flex-grow: 0;
+    flex-shrink: 1;
+    align-self: stretch;
+    order: 1;
+}
+
+#card-3{
+    flex-basis: 250px;
+    flex-grow: 1;
+    flex-shrink: 2;
+    align-self: flex-start;
+    order: 4;
+}
+
+#card-5{
+    flex-basis: 500px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    align-self: flex-end;
+    order: 2;
+}
+
 footer{
-    height: 10%;
-    width: 100%;
+    height: 5vh;
     background-color: rgb(255, 0, 221);
+}
+
+.card:hover{
+    background-color: #ae00ff;
 }
