--- a/lista-9/css/home.css
+++ b/lista-9/css/home.css
@@ -3,6 +3,8 @@ header{
     margin: auto;
     padding: 17px; 
     background-color: #f24a1d;
+    position: sticky;
+    top: 0;
 }
 
 .header-container{
@@ -39,12 +41,10 @@ main {
     gap: 20px; 
 }
 
-/* MUDAR E ADICIONAR RESPONSIVIDADE SMARTPHONE */
 
-section.produtos {
+.produtos {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-  
     background-color: white;
 }
 
@@ -87,8 +87,6 @@ section.produtos {
     padding: 8px 8px;
     margin: 0 0 10px 0;
     font-size: 1.5em;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
-
 }
 
 .tutorial {
@@ -98,11 +96,6 @@ section.produtos {
     padding: 0 0 0 10px;
     margin-bottom: 2px;
     height: 125px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.08);
-}
-
-.tutorial:last-child {
-    margin-bottom: 0;
 }
 
 .tutorial img {
@@ -116,7 +109,7 @@ section.produtos {
 .publicidade {
     margin-top: 40px;
     height: auto;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+
 }
 
 .publicidade h2 {
@@ -125,8 +118,6 @@ section.produtos {
     height: 40px;
     margin: 0 0 10px 0;
     font-size: 1.5em;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
-
     margin: transparent;
 }
 
@@ -135,9 +126,6 @@ section.produtos {
     display: block;
     background-color: white;
     padding: 10px;
-
-    margin-bottom: 0px;
-    /* espaço entre as imagens, agora BRANCO */
 
 }
 
