--- a/lista-9/css/registro.css
+++ b/lista-9/css/registro.css
@@ -49,7 +49,7 @@ main form{
     margin-top: 50px;
     display: flex;
     flex-direction: column;
-    gap: 7px;
+    gap: 20px;
 
 }
 
@@ -58,7 +58,47 @@ main form{
     width: 500px;
 }
 
+select{
+    width: 250px;
+}
+
 .alternativas{
     display: flex;
     flex-direction:row;
+    gap: 10px;
+}
+
+textarea{
+    height: 150px;
+}
+
+.TeC{
+    display: flex;
+    gap: 10px;
+}
+
+.botao-input{
+    display: flex;
+    gap: 5px;
+}
+
+.botao-button{
+    display: flex;
+    gap: 5px;
+}
+
+input[type="button"]{
+    width: 70px;
+}
+
+button{
+    height: 35px;
+    width: 150px;
+    margin-bottom: 10px;
+    border-style: none;
+    border-radius: 10px;
+    font-size: 18px;
+    color: white;
+    background-color: rgb(32, 148, 202);
+    cursor: pointer;
 }
