--- a/lista-9/css/reset.css
+++ b/lista-9/css/reset.css
@@ -8,3 +8,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(../assets/bg-2.png);
 }
+
+botoes{
+    display: grid;
+}
